--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Cowhist19</title>
-    <link rel="icon" type="image/x-icon" href="/src/resources/favicon.ico">
+    <link rel="icon" href="/public/favicon.ico"/>
   </head>
   <body>
     <div id="root"></div>
