--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Cowhist19</title>
+    <title>CoWhist19</title>
     <link rel="icon" type="image/x-icon" href="/favicon.png"/>
     <link rel="manifest" href="/manifest.json">
   </head>
