--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <title>CoWhist19</title>
     <link rel="icon" type="image/x-icon" href="/favicon.png"/>
     <link rel="manifest" href="/manifest.json">
-    <!-- Google Tag Manager -->
+    <!-- Google Tag Manager --
     <script>
       (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript) --
     <noscript>
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MHN392T"
       height="0" width="0" style="display:none;visibility:hidden"></iframe>
