--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
     <link rel="manifest" href="/manifest.json">
   </head>
-  <body>
+  <body style="margin:0px">
     <div id="root"></div>
   </body>
 </html>
